added Netlify link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           >open-sourced on GitHub</a
         >
         and
-        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
+        <a href="https://stately-empanada-897016.netlify.app" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
