--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <body>
     <div class="weather-app">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city.."
             required
+            id="search-form-input"
             class="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
@@ -45,20 +46,17 @@
 
       <footer>
         This project was coded by
-        <a href="https://github.com/yulianagoncharenko" target="_blank"> Yuliana Goncharenko</a>,
+        <a href="https://github.com/matthieua/" target="_blank"> Matt Delac</a>,
         is
-        <a href="https://github.com/yulianagoncharenko/meteo" target="_blank"
+        <a href="https://github.com/matthieua/meteo" target="_blank"
           >open-sourced on GitHub</a
         >
         and
-        <a href="https://stately-empanada-897016.netlify.app" target="_blank"
+        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
     </div>
     <script src="src/index.js"></script>
-    <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
-    <div aria-label="grammarly-integration" role="group" tabindex="-1" class="grammarly-desktop-integration" data-content="{&quot;mode&quot;:&quot;full&quot;,&quot;isActive&quot;:true,&quot;isUserDisabled&quot;:false}"></div>
-    <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
   </body>
 </html>
