returned to previous html

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 
       <footer>
         This project was coded by
-        <a href="https://github.com/matthieua/" target="_blank"> Matt Delac</a>,
+        <a href="https://github.com/yulianagoncharenko" target="_blank"> Yuliana Goncharenko</a>,
         is
-        <a href="https://github.com/matthieua/meteo" target="_blank"
+        <a href="https://github.com/yulianagoncharenko/meteo" target="_blank"
           >open-sourced on GitHub</a
         >
         and
-        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
+        <a href="https://stately-empanada-897016.netlify.app" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
